--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactjs-popup": "^2.0.4",
+    "simple-react-validator": "^1.6.0",
     "validator": "^13.5.2",
     "web-vitals": "^1.1.1"
   },
